--- a/kaneesha_wordpress.conf
+++ b/kaneesha_wordpress.conf
@@ -28,7 +28,8 @@ server {
                 #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
                 include fastcgi.conf;
                 fastcgi_intercept_errors on;
-                fastcgi_pass unix:/run/php/php7.2-fpm.pid;
+                fastcgi_pass unix:/run/php/php7.2-fpm.sock;
+                #fastcgi_pass unix:/run/php/php7.2-fpm.pid;
 
                 #fastcgi_pass 127.0.0.1:9000;
                 #fastcgi_pass unix:/var/run/php5-fpm/DOMAINNAME.socket;
