--- a/kaneesha_wordpress.conf
+++ b/kaneesha_wordpress.conf
@@ -1,44 +1,19 @@
-
 server {
-
+        listen 80;
+        root /var/www/html;
+        index index.php index.html index.htm index.nginx-debian.html;
         server_name kh.russjohnsonio.icu;
 
-        root /root/kaneesha_wordpress/wordpress-5.2.2/wordpress;
-
-        index index.php;
-
-        location = /favicon.ico {
-                log_not_found off;
-                access_log off;
-        }
-
-        location = /robots.txt {
-                allow all;
-                log_not_found off;
-                access_log off;
-        }
-
         location / {
-                # This is cool because no php is touched for static content.
-                # include the "?$args" part so non-default permalinks doesn't break when using query string
-                try_files $uri $uri/ /index.php?$args;
+                try_files $uri $uri/ =404;
         }
 
         location ~ \.php$ {
-                #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-                include fastcgi.conf;
-                fastcgi_intercept_errors on;
-                fastcgi_pass unix:/run/php/php7.2-fpm.sock;
-                #fastcgi_pass unix:/run/php/php7.2-fpm.pid;
-
-                #fastcgi_pass 127.0.0.1:9000;
-                #fastcgi_pass unix:/var/run/php5-fpm/DOMAINNAME.socket;
-                #fastcgi_pass unix:/run/php/php7.2-fpm.pid;
-
+                include snippets/fastcgi-php.conf;
+                fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
         }
 
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
-                expires max;
-                log_not_found off;
+        location ~ /\.ht {
+                deny all;
         }
 }
