--- a/kaneesha_wordpress.conf
+++ b/kaneesha_wordpress.conf
@@ -1,6 +1,6 @@
 server {
         listen 80;
-        root /var/www/html;
+        root /root/kaneesha_wordpress/wordpress-5.2.2/wordpress;
         index index.php index.html index.htm index.nginx-debian.html;
         server_name kh.russjohnsonio.icu;
 
