--- a/kaneesha_wordpress.conf
+++ b/kaneesha_wordpress.conf
@@ -9,7 +9,7 @@ server {
         }
 
         location ~ \.php$ {
-                include snippets/fastcgi-php.conf;
+                #include snippets/fastcgi-php.conf;
                 fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
         }
 
