--- a/kaneesha_wordpress.conf
+++ b/kaneesha_wordpress.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         root /www/kaneesha_wordpress/wordpress-5.2.2/wordpress;
         index index.php index.html index.htm index.nginx-debian.html;
-        server_name kh.russjohnsonio.icu;
+        server_name kh.russjohnsonio.icu kh.greatlakescode.us;
 
         location / {
                 try_files $uri $uri/ =404;
